# BlendshapeGeneration

./: CMakeLists.txt  CMakeLists.txt~  README.md
.anjuta/session/: dock-layout.xml
cmake_modules/: FindSuiteSparse.cmake  FindSuiteSparse.cmake~
data/: landmarks_73_new.txt
data/Tester_1/TrainingPose/: pose_0.land  pose_0.poses  pose_1.land  pose_1.poses  pose_10.land  pose_10.poses  pose_11.land  pose_11.poses  pose_12.land  pose_12.poses  pose_13.land  pose_13.poses  pose_14.land  pose_14.poses  pose_15.land  pose_15.poses  pose_16.land  pose_16.poses  pose_17.land  pose_17.poses  pose_18.land  pose_18.poses  pose_19.land  pose_19.poses  pose_2.land  pose_2.poses  pose_3.land  pose_3.poses  pose_4.land  pose_4.poses  pose_5.land  pose_5.poses  pose_6.land  pose_6.poses  pose_7.land  pose_7.poses  pose_8.land  pose_8.poses  pose_9.land  pose_9.poses
data/Tester_101/TrainingPose/: pose_0.land  pose_0.poses  pose_1.land  pose_1.poses  pose_10.land  pose_10.poses  pose_11.land  pose_11.poses  pose_12.land  pose_12.poses  pose_13.land  pose_13.poses  pose_14.land  pose_14.poses  pose_15.land  pose_15.poses  pose_16.land  pose_16.poses  pose_17.land  pose_17.poses  pose_18.land  pose_18.poses  pose_19.land  pose_19.poses  pose_2.land  pose_2.poses  pose_3.land  pose_3.poses  pose_4.land  pose_4.poses  pose_5.land  pose_5.poses  pose_6.land  pose_6.poses  pose_7.land  pose_7.poses  pose_8.land  pose_8.poses  pose_9.land  pose_9.poses
include/: BlendshapeGenerator.h  Common.h  DeformationTransfer.h  MeshTransfer.h  TestCases.h  TriangleGradient.h  Utils.h
python/: config.py  load_obj.py  optimize.py
src/: BlendshapeGenerator.cpp  DeformationTransfer.cpp  MeshTransfer.cpp  TestCases.cpp  TriangleGradient.cpp
